# Cpp_MLP

./: .gitignore  CMakeLists.txt  README.md
Framework/: CMakeLists.txt
Framework/inc/: ActivationFunctions.hpp  Layers.hpp  MLP.hpp  Preprocessor.hpp  Reader.hpp
Framework/src/: ActivationFunctions.cpp  Dense.cpp  Dropout.cpp  Layers.cpp  MLP.cpp  Preprocessor.cpp  Reader.cpp
app/: CMakeLists.txt
app/inc/: main.hpp
app/src/: load.cpp  trainer.cpp
example_outputs/: network_1  network_2  network_3  network_4  network_5  network_6  network_7  network_8  network_9
